--- a/home/templates/pages/home.html
+++ b/home/templates/pages/home.html
@@ -3,7 +3,7 @@
 {% block title %}Home{% endblock%}
 
 {% block content %}
-<p>Họ Tên: Nguyễn Hoàng Phụng </p> 
+<p>Họ Tên: Hoàng Phụng </p> 
 <p>Năm sinh: 2000 </p> 
 <p>Quê quán: Sóc Trăng </p> 
 {% endblock  %}
