--- a/home/templates/pages/home.html
+++ b/home/templates/pages/home.html
@@ -4,6 +4,6 @@
 
 {% block content %}
 <p>Họ Tên: Hoàng Phụng </p> 
-<p>Năm sinh: 2000 </p> 
+<p>Năm: 2000 </p> 
 <p>Quê quán: Sóc Trăng </p> 
 {% endblock  %}
