--- a/home/templates/pages/home.html
+++ b/home/templates/pages/home.html
@@ -5,5 +5,5 @@
 {% block content %}
 <p>Họ Tên:N Hoàng Phụng </p> 
 <p>Năm: 2000 </p> 
-<p>Quê quán:Sóc Trăng </p> 
+<p>Quê quán: </p> 
 {% endblock  %}
